--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,10 +214,10 @@ if(TARGET fresnel_test)
   target_link_libraries(fresnel_test ${catkin_LIBRARIES} ${PROJECT_NAME})
 endif()
 
-catkin_add_gtest(timing_test test/timing_test.cpp)
-if(TARGET timing_test)
-  target_link_libraries(timing_test ${catkin_LIBRARIES} ${PROJECT_NAME})
-endif()
+#catkin_add_gtest(timing_test test/timing_test.cpp)
+#if(TARGET timing_test)
+#  target_link_libraries(timing_test ${catkin_LIBRARIES} ${PROJECT_NAME})
+#endif()
 
 catkin_add_gtest(jacobian_test test/jacobian_test.cpp)
 if(TARGET jacobian_test)
